[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntpc_opendata_tool"
version = "0.1.0"
description = "新北市交通局 OpenData API 查詢工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jell wu", email = "jell0720@gmail.com"}
]
dependencies = [
    "mcp[cli]",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "uvicorn>=0.27.0",
    "pandas>=2.2.0",
]

[project.scripts]
ntpc-opendata = "ntpc_opendata_tool.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["ntpc_opendata_tool"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 